# alphazero

./: .gitignore  build.py  meson.build  pyproject.toml
alphazero/engine/: __init__.pyi  othello.pyi
engines/cpp/: board.hpp  build.py  conanfile.txt  meson.build  pyproject.toml
engines/cpp/src/othello/: board.cpp
src/cpp/: bindings.cpp  board.cpp  board.hpp  meson.build
src/cpp/othello/: board.hpp
src/python/: app.py  engine.py  meson.build
