[project]
name = "alphazero"
description = "A generic AlphaZero implementation with C++ and Rust backends"
version = "0.1.0"
authors = [
    {name = "Kevin Lane", email = "lane.kevin.a@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.2.0",
    "pygame-gui>=0.6.8",
]

[project.optional-dependencies]
cpp = ["alphazero-cpp @ {root:uri}/engines/cpp"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["alphazero"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
